# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.59"                                   # error handling
async-trait = "0.1.51"                              # async trait definitions
atoi = "2.0.0"
bytes = "1.3.0"                                     # helps manage buffers
clap = { version = "~4.0", features = ["derive"] }                             # command line argument parsing
tokio = { version = "1.23.0", features = ["full"] } # async networking
base64 = "0.22.0"                                   # base64 encoding
once_cell = "1.8.0"                                 # lazy statics
tokio-test = "0.4.4"